// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entity > can be created with attributes 1`] = `
{
  "attributes": [
    {
      "name": "required",
      "validate": [Function],
    },
  ],
  "childrenAllowed": false,
  "defaultValue": [Function],
  "name": "text",
  "parentRequired": false,
  "shouldBeProcessed": [Function],
  "validate": [Function],
  "valueAllowed": true,
}
`;

exports[`entity > can be created with default value 1`] = `"test"`;

exports[`entity > can be created with minimal options 1`] = `
{
  "attributes": [],
  "childrenAllowed": false,
  "defaultValue": [Function],
  "name": "text",
  "parentRequired": false,
  "shouldBeProcessed": [Function],
  "validate": [Function],
  "valueAllowed": false,
}
`;

exports[`entity > can be created with minimal options 2`] = `undefined`;

exports[`entity > can validate values 1`] = `"valid"`;

exports[`entity > can validate values 2`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"string\\",
    \\"received\\": \\"number\\",
    \\"path\\": [],
    \\"message\\": \\"Expected string, received number\\"
  }
]"
`;

exports[`entity > throws when validating without a validator 1`] = `"Values for entities of type 'text' are not allowed."`;

exports[`entity > throws when validating without a validator 2`] = `undefined`;
